Fixed white gap between page section on landing page moving spacer, bookWrp

--- a/src/page/BookPage.module.css
+++ b/src/page/BookPage.module.css
@@ -76,7 +76,7 @@
     transform: scale(0.6) translate(0, -60px);
 }
 
-.gradient{
+.spacer{
     background-image: url(/public/svg/SVG/bookpage-wave.svg);
     aspect-ratio: 9/6;
     width: 100%;
@@ -154,5 +154,15 @@
 @media screen and (max-width: 612px) {
     .bookShelf {
         transform: scale(0.7);
+    }
+}
+
+@media screen and (max-width: 478px){
+    .bookWrp{
+        transform: translate(0, 3px);
+    }
+
+    .spacer{
+        transform: translate(0, 4px);
     }
 }
