--- a/src/page/LastReadPage.module.css
+++ b/src/page/LastReadPage.module.css
@@ -262,7 +262,7 @@
     }
 
     .lastread{
-        transform: scale(0.72) translate(0, 20px);
+        transform: scale(0.72) translate(0, -100px);
     }
 
 
