--- a/src/page/layout/Layout.module.css
+++ b/src/page/layout/Layout.module.css
@@ -1023,3 +1023,10 @@ footer, #footer {
     font-size: 18px;
   }
 }
+
+@media screen and (max-width: 478px){
+  .spacer{
+    transform: translate(0, 2px)
+  }
+
+}
